[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/Buttons/GenericButton.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/MenuButton.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonHoverOff.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonClick.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Audio/Effects/MenuButtonHoverOn.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.207843, 0.2, 1 )
border_color = Color( 0.34902, 0.694118, 0.509804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.505882, 0.533333, 0.517647, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.960784, 0.796078, 0.360784, 1 )

[node name="GenericButton" type="HBoxContainer"]
margin_right = 116.0
margin_bottom = 116.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
button_text = "Menu"
rect_color = Color( 0.356863, 0.682353, 0.482353, 1 )

[node name="ColorRectLeft" type="ColorRect" parent="."]
margin_bottom = 116.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.356863, 0.682353, 0.482353, 1 )

[node name="Button" type="Button" parent="."]
margin_right = 360.0
margin_bottom = 116.0
rect_min_size = Vector2( 360, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.2, 0.207843, 0.2, 1 )
custom_colors/font_color = Color( 0.2, 0.207843, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.796078, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 0.2, 0.207843, 0.2, 1 )
action_mode = 0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectRight" type="ColorRect" parent="."]
margin_left = 360.0
margin_right = 360.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.356863, 0.682353, 0.482353, 1 )

[node name="ColorRectTween" type="Tween" parent="."]

[node name="SpawnTween" type="Tween" parent="."]

[node name="MenuButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
bus = "Effects"

[node name="MenuButtonHoverOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "Effects"

[node name="MenuButtonHoverOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
bus = "Effects"
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
